<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="yourfitnessfriend"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000" />

        <ImageButton
            android:id="@+id/profileButtonTop"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="110dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_profile"
            app:tint="#000000" />
    </LinearLayout>

    <ImageView
        android:id="@+id/profilePictureImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="User Name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/profilePictureImageView"
        app:layout_constraintStart_toEndOf="@id/profilePictureImageView"
        app:layout_constraintTop_toTopOf="@id/profilePictureImageView" />

    <EditText
        android:id="@+id/goalEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Enter your goal"
        app:layout_constraintEnd_toStartOf="@id/addGoalButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePictureImageView" />

    <Button
        android:id="@+id/addGoalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/goalEditText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goalsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goalEditText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#F5F5F5"
        android:elevation="8dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/home"
            app:tint="#000000" />

        <ImageButton
            android:id="@+id/AccountActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/add_activity"
            app:tint="#000000" />

        <ImageButton
            android:id="@+id/viewItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_activity"
            android:contentDescription="@string/community"
            app:tint="#000000" />

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/profile"
            app:tint="#0000"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>